public/stylesheets/app.css
/* ... */
.result-item .full-name {
  position: absolute;
  top: 26px;
  left: 20px;
  font-size: 16px;
}

/*#tabs .tab:not(.active) input { cursor: pointer; }*/

#document_tab { background: rgba(99,88,73, 0.7); /* background: #635849; */ }
#document_tab .user-name {padding-left: 10px; max-width: 210px; overflow: hidden; white-space: nowrap; }
#document_tab > div {height: 26px; float: left; line-height: 26px;}

#document_tab input { float: left; border: 1px solid transparent; width: 100px; margin-left: 5px; height: 26px; background: rgba(0,0,0, 0); color: rgba(255,255,255, 0.7); }
#document_tab input:focus {border-bottom: 1px dotted #fff; color: rgba(255,255,255, 1); }


/* body > #container
-------------------------------------------------------------------------------*/

#container { margin: 0; padding: 0; }

/* body > #container > #header
-------------------------------------------------------------------------------*/

#header {
  position: relative;
  margin: 0 180px 10px 100px;
  height: 65px;
  font-style: italic;
  background: #F0F1EB;
  overflow: auto;
  line-height: 60px;
}


#header .title {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-weight: lighter;
  font-style: normal;
  font-size: 30px;
  float: left;
}

#header .title a { border: none; }

#header #login_state {
  float: right;
}

#header #sync_state {
  position: absolute;
  left: 300px;
}

/* body > #container > #content_wrapper
-------------------------------------------------------------------------------*/

#content_wrapper {
  position: relative;
  margin: 0;
}


/* Page Content Dialogue
-------------------------------------------------------------------------------*/

.page-content {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  padding: 0px 0 50px 0;
  border-bottom: 1px solid #CCC;
}

.page-content h1 {
  color: #000;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
}

.page-content select { float: left;  }
.page-content input { float: left; background: rgba(255,255,255, 0.6); width: 250px; }
.page-content input:hover { background :#fff; }
.page-content input:focus { background :#fff; }
.page-content input.error { border: 2px solid red; }
.page-content label { display: block; float: left; width: 300px; position: relative; font-size: 16px; font-style: italic; }
.page-content label span { position: absolute; top: 20px; left: 0px; font-family: Helvetica; color: #888; font-size: 11px; font-style: normal; }
.page-content div { padding: 20px 0; overflow: auto }
.page-content input[type=submit] { background: #A2C44E; color: white; border: none; }

/* Messages for input fields */
.page-content .input-message { float: left; padding: 0 20px; margin: 0; 
  font-family: Helvetica;
  font-size: 12px;
}

.page-content #registration_error_message {
  font-size: 18px;
  padding: 0;
  margin: 0;
  color: darkred;
  margin-top: 20px;
  overflow: hidden;
}

/* body > #container > #browser_wrapper
-------------------------------------------------------------------------------*/

#browser_wrapper {
  margin: 0 180px 0px 100px;
  padding: 0px 0 50px 0;
  border-bottom: 1px solid #ccc;
  position: relative;
}

#browser_wrapper h2 {
  padding-top: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid #ccc;
  border-top: 1px solid #ccc;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
}

#browser {
  overflow: auto;
  margin: 0px 0px 0px 0px;
}

#user_profile {
  overflow: auto;
  margin: 0px 0px 20px 0px;
}

#user_profile .avatar {
  width: 260px;
  float: left;
}

#user_profile img {
/*  background: blue;*/
  padding: 10px 0;
  margin: 10px 0;
}

#user_profile dl {
  margin-left: 10px;
}

#user_profile dt {
  color: #666;
}

#user_profile dd {
  color: black;
}


/* body > #container > .menu
-------------------------------------------------------------------------------*/

.menu {
  box-sizing:content-box;
  -webkit-box-sizing:content-box;
  -moz-box-sizing:content-box;
  
  position: absolute;
/*  top: 0px;*/
  left: 230px;
  right: 180px;
  background: #635849;
  height: 26px;
  line-height: 26px;
  padding: 0 0px 0 20px;
  color: white;
}


/* name the menu panel */
.menu div.header {
  font-size: 18px;
  font-style: italic;
  position: absolute;
  left: -210px;
  width: 209px;
  padding-left: 0px;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-weight: lighter;
}

.menu .label {
  margin-bottom: 1px;
  display: block;
  overflow: auto;
}

.label.choice.hidden { display: none; }

.menu a {
  color: #fff;
}

.menu .label .text {
  vertical-align: bottom;
  width: 182px;
  line-height: 26px;
  padding-left: 5px;
  display: block;
  float: left;
  margin-left: 1px;
}

#document_menu .text { background: #635849; }
#document_menu .icon { background-color: #635849; }
#browser_menu .text { background: #586C72; }
#browser_menu .icon { background-color: #586C72; }


/* commonly used */
.menu-content {
  overflow: auto;
  height: 26px;
  color: white;
  font-size: 13px;
  padding: 0 5px 0 0;
  position:  relative;
}

.menu-activity {
  display: none;
}


/* body > #container > #browser_wrapper > #browser_menu
-------------------------------------------------------------------------------*/

#browser_menu {
  position: fixed;
  top: 60px;
  left: 230px;
  
  right: 180px;
  height: 26px;
  background: #586C72;
  
  line-height: 26px;
  padding: 0 180px 0 20px;
  z-index: 10000;
}

#browser_menu .document-type-selection {
  display: none;
  position: absolute;
  top: 30px;
  background: #F0F1EB;
  width: 150px;
}

.document-type-selection a {
  color: #929292;
  padding: 3px;
  text-decoration: none;
}

.document-type-selection a:hover {
  background: black;
  color: white;
}

#browser_menu #title {
  position: absolute;
  left: 20px;
  z-index: 5000;
}
/* ... */

